<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mov1"
    tools:context="neotica.onboarding.ob1">

  <Button
      android:id="@+id/login_btn"
      android:layout_width="300dp"
      android:layout_height="wrap_content"
      android:layout_marginBottom="16dp"
      android:background="@drawable/shape_rectangle_light"
      android:text="@string/loginbtn"
      android:textColor="@color/white"
      android:textSize="20sp"
      app:layout_constraintBottom_toTopOf="@+id/register_btn"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.495"
      app:layout_constraintStart_toStartOf="parent" />

  <ImageView
      android:id="@+id/imageView4"
      android:layout_width="300dp"
      android:layout_height="200dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.497"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:srcCompat="@drawable/mov_logo" />

  <TextView
      android:id="@+id/textView2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/login"
      android:textColor="@color/white"
      android:textSize="34sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.168"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/imageView4" />

  <TextView
      android:id="@+id/textView3"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="12dp"
      android:gravity="left"
      android:text="@string/username"
      android:textColor="@color/white"
      android:textSize="20sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="@+id/textView2"
      app:layout_constraintTop_toBottomOf="@+id/textView2" />

  <TextView
      android:id="@+id/textView4"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:gravity="left"
      android:text="@string/password"
      android:textColor="@color/white"
      android:textSize="20sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="@+id/textView2"
      app:layout_constraintTop_toBottomOf="@+id/imageView2" />

  <EditText
      android:id="@+id/login_username_et"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:ems="10"
      android:gravity="left"
      android:hint="@string/username"
      android:textColor="@color/white"
      android:inputType="text"
      android:minHeight="48dp"
      android:textColorHint="@color/mov2"
      app:layout_constraintStart_toStartOf="@+id/textView3"
      app:layout_constraintTop_toBottomOf="@+id/textView3" />

  <EditText
      android:id="@+id/login_password_et"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:ems="10"
      android:gravity="left"
      android:hint="@string/password"
      android:textColor="@color/white"
      android:inputType="textPassword"
      android:minHeight="48dp"
      android:textColorHint="@color/mov2"
      app:layout_constraintStart_toStartOf="@+id/textView4"
      app:layout_constraintTop_toBottomOf="@+id/textView4" />

  <ImageView
      android:id="@+id/imageView2"
      android:layout_width="350dp"
      android:layout_height="wrap_content"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/login_username_et"
      app:srcCompat="@drawable/line1" />

  <ImageView
      android:id="@+id/imageView5"
      android:layout_width="350dp"
      android:layout_height="wrap_content"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.508"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/login_password_et"
      app:srcCompat="@drawable/line1" />

  <Button
      android:id="@+id/register_btn"
      android:layout_width="300dp"
      android:layout_height="wrap_content"
      android:layout_marginBottom="32dp"
      android:background="@drawable/shape_rectangle_dark"
      android:text="@string/register"
      android:textColor="@color/mov3"
      android:textSize="20dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>