<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomescreenFragment"
    android:fillViewport="true">



    <!-- TODO: Update blank fragment layout -->
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/coming_soon_title"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView10" />

            <ImageView
                android:id="@+id/homescreen_profile"
                android:layout_width="76dp"
                android:layout_height="76dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/profile_picture" />

            <TextView
                android:id="@+id/homescreen_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/Name"
                android:textColor="@color/white"
                android:textSize="40dp"
                app:layout_constraintBottom_toBottomOf="@+id/homescreen_profile"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="18dp"
                android:layout_height="18dp"
                app:layout_constraintStart_toStartOf="@+id/homescreen_name"
                app:layout_constraintTop_toBottomOf="@+id/homescreen_name"
                app:srcCompat="@drawable/wallet_img" />

            <TextView
                android:id="@+id/homescreen_saldo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="Rp 0"
                android:textColor="@color/white"
                app:layout_constraintStart_toEndOf="@+id/imageView8"
                app:layout_constraintTop_toBottomOf="@+id/homescreen_name" />

            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/homescreen_saldo"
                app:srcCompat="@drawable/line1" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/now_playing_title"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView9" />

            <ImageView
                android:id="@+id/imageView10"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recNowPlaying"
                app:srcCompat="@drawable/line1" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recNowPlaying"
                android:layout_width="match_parent"
                android:layout_height="345dp"
                android:layout_marginTop="1dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView9" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recComingSoon"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_marginBottom="50dp"
                app:layout_constraintBottom_toBottomOf="@id/constraint1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>